# p52

./: .gitignore  README.md  pyproject.toml
p52/: __init__.py  compiler.py  reloader.py  sketchClass.py  viewer.py
p52/static/: allDefinition.py  index.html
p52/utils/: p52.py  utils.py
